SITIONIX-62 QueryPlan v2 request contract
